--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,3 +12,23 @@
  *= require_tree .
  */
  @import "bootstrap";
+ 
+body {
+  padding-top: 70px;
+}
+.show-grid [class^="col-"] {
+  border: 1px solid #ddd;
+}
+.first-column, .second-column, .third-column, .fourth-column {
+  height: 300px;
+}
+.fifth-column, .sixth-column {
+  height: 150px;
+}
+.column-within {
+  height: 50%;
+  
+  & [class^="col-"] {
+    height: 100%;
+  }
+}
