--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -1,26 +1,26 @@
 .row.canvas.show-grid
   .col-xs-12
     .row
-      .col-sm-3.first-column
-        Something!
+      .col-sm-3.first-column.slide
+        = render partial: 'slide'
       .col-sm-3.second-column
         .row.column-within
-          .col-xs-12
-            Something else!
+          .col-xs-12.slide
+            = render partial: 'slide'
         .row.column-within
-          .col-xs-12
-            Something awesome!
+          .col-xs-12.slide
+            = render partial: 'slide'
       .col-sm-3.third-column
         .row.column-within
-          .col-xs-12
-            Hooray!
+          .col-xs-12.slide
+            = render partial: 'slide'
         .row.column-within
-          .col-xs-12
-            Whatever
-      .col-sm-3.fourth-column
-        Yes, this got old quite fast
+          .col-xs-12.slide
+            = render partial: 'slide'
+      .col-sm-3.fourth-column.slide
+        = render partial: 'slide'
     .row
-      .col-xs-6.fifth-column
-        Something down below
-      .col-xs-6.sixth-column
-        And this thing right here at the end
+      .col-xs-6.fifth-column.slide
+        = render partial: 'slide'
+      .col-xs-6.sixth-column.slide
+        = render partial: 'slide'
