--- a/app/assets/stylesheets/index.css.scss
+++ b/app/assets/stylesheets/index.css.scss
@@ -49,3 +49,12 @@
     height: 100%;
   }
 }
+.field {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  
+  input[type="text"] {
+    border: 1px solid #aaa;
+    border-radius: 5px;
+  }
+}
