--- a/app/assets/stylesheets/index.css.scss
+++ b/app/assets/stylesheets/index.css.scss
@@ -4,6 +4,14 @@
   height: 300px;
 }
 .show-grid {
+  .takeaway {
+    height: 40px !important;
+    bottom: 0px;
+    position: absolute;
+    padding-top: 5px;
+    border: none;
+    background-color: #f5f5f5;
+  }
   .editor {
     margin-top: 7px;
     border: 1px solid #bbb;
