--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,8 @@
     = render partial: 'header'
     .container
       .row.off-canvas.off-canvas-left
-        = render partial: 'left_nav'
+        .col-xs-12.col-sm-3.sidebar-offcanvas#sidebar{role: 'navigation'}
+          = render partial: 'left_nav'
         .col-xs-12.col-sm-9
           = yield
     = stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
