--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,14 +2,14 @@
 %html
   %head
     %title J2C
+    = stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
     = csrf_meta_tags
   %body
-    = render partial: 'header'
+    = render partial: 'layouts/header'
     .container
       .row.off-canvas.off-canvas-left
         .col-xs-12.col-sm-3.sidebar-offcanvas#sidebar{role: 'navigation'}
-          = render partial: 'left_nav'
+          = render partial: 'layouts/left_nav'
         .col-xs-12.col-sm-9
-          = yield
-    = stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
+          = content_for?(:content) ? yield(:content) : yield
     = javascript_include_tag "application", "data-turbolinks-track" => true      
