--- a/app/assets/stylesheets/canvases.css.scss
+++ b/app/assets/stylesheets/canvases.css.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the canvases controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body.canvases {
+  #sidebar {
+    .edit-canvas {
+      font-size: 10px;
+    }
+  }
+}
