--- a/app/views/canvases/show.html.haml
+++ b/app/views/canvases/show.html.haml
@@ -4,6 +4,9 @@
     = link_to 'Edit', edit_canvas_path(@canvas)
     \|
     = link_to 'Back', canvases_path
+    
+  .blocks
+    = render "blocks"
 
 %p#notice= notice
 
