Template for showing single block Canvas done - only missing style

--- a/app/views/canvases/show.html.haml
+++ b/app/views/canvases/show.html.haml
@@ -8,8 +8,6 @@
   .blocks
     = render "blocks/index", object: @blocks = @canvas.blocks
 
-%p#notice= notice
-
-%p
-  %b Title:
-  = @canvas.title
+.canvas
+  .row
+    = render "canvas_template"
