--- a/app/views/blocks/_index.html.haml
+++ b/app/views/blocks/_index.html.haml
@@ -1,7 +1,7 @@
 - @blocks.each do |block|
-  .row
-    .col-xs-12
+  .row.block
+    .col-xs-12.title
       = block.title
-    .row
-      .col-xs-12
-        = block.takeaway
+      .row
+        .col-xs-12.takeaway
+          = block.takeaway
