--- a/app/views/canvases/edit.html.haml
+++ b/app/views/canvases/edit.html.haml
@@ -1,7 +1,5 @@
-%h1 Editing canvas
+%h1 Título do Canvas
 
 = render 'form'
-
-= link_to 'Show', @canvas
-\|
-= link_to 'Back', canvases_path
+%br
+= link_to 'Back', :root
