--- a/app/views/canvases/_form.html.haml
+++ b/app/views/canvases/_form.html.haml
@@ -7,7 +7,6 @@
           %li= msg
 
   .field
-    = f.label :title
-    = f.text_field :title
+    = f.text_field :title, placeholder: 'Título do Canvas'
   .actions
-    = f.submit 'Save'
+    = f.submit 'Save', class: 'btn btn-primary'
