--- a/app/assets/stylesheets/canvases.css.scss
+++ b/app/assets/stylesheets/canvases.css.scss
@@ -13,9 +13,13 @@ body.canvases {
       };
     }
     .blocks {
+      .add-block {
+        text-align: center;
+        margin-top: 10px;
+      }
       .block{
         background: #e9e9e9;
-        border-bottom: 2px;
+        margin-bottom: 2px;
         padding-top: 5px;
         padding-bottom: 5px;
         text-align: center;
