--- a/app/assets/stylesheets/blocks.css.scss
+++ b/app/assets/stylesheets/blocks.css.scss
@@ -1,3 +1,327 @@
 // Place all the styles related to the Blocks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body.canvases {
+  .canvas {
+    .block {
+      border: 1px solid #a1a1a1;
+      
+      &.block-1 {
+        width: 100%;
+      }
+      
+      &.block-2 {
+        width: 50%;
+        float: left;
+        
+        &:last-child {
+          border-left: none;
+        };
+      }
+      
+      &.block-3 {
+        width: 34%;
+        float:left;
+        
+        &.bl-1 {
+          width: 33%;
+          border-right: none;
+        };
+        &.bl-3 {
+          width: 33%;
+          border-left: none;
+        };
+      }
+      
+      &.block-4 {
+        width: 50%;
+        float:left;
+        
+        &.bl-1 {
+          border-right: none;
+          border-bottom: none;
+        }
+        &.bl-2 {
+          border-bottom: none;
+        }
+        &.bl-3 {
+          border-right: none;
+        }
+        
+        .block-link {
+          .title {
+            h2 {
+              font-size: 25px;
+              margin-top: 12px;
+              margin-bottom: 7px;
+            }
+          }
+        
+          .keypoints {
+            height: 150px;
+          }
+        }
+      }
+      
+      &.block-5 {
+        float: left;
+        
+        &.bl-1 {
+          width: 33%;
+          border-right: none;
+        }
+        &.bl-2 {
+          width: 34%;
+        }
+        &.bl-3 {
+          width: 33%;
+          border-left: none;
+        }
+        &.bl-4 {
+          width: 50%;
+          border-right: none;
+          border-top: none;
+        }
+        &.bl-5 {
+          width: 50%;
+          border-top: none;
+        }
+        
+        .block-link {
+          .title {
+            h2 {
+              font-size: 23px;
+              margin-top: 10px;
+              margin-bottom: 5px;
+            }
+          }
+        
+          .keypoints {
+            height: 150px;
+          }
+        }
+      }
+      
+      &.block-6 {
+        float: left;
+        
+        &.bl-1 {
+          width: 33%;
+          border-right: none;
+        }
+        &.bl-2 {
+          width: 34%;
+        }
+        &.bl-3 {
+          width: 33%;
+          border-left: none;
+        }
+        &.bl-4 {
+          width: 33%;
+          border-right: none;
+          border-top: none;
+        }
+        &.bl-5 {
+          width: 34%;
+          border-top: none;
+        }
+        &.bl-6 {
+          width: 33%;
+          border-top: none;
+          border-left: none;
+        }
+        
+        .block-link {
+          .title {
+            h2 {
+              font-size: 22px;
+              margin-top: 10px;
+              margin-bottom: 5px;
+            }
+          }
+        
+          .keypoints {
+            height: 150px;
+          }
+        }
+      }
+      
+      &.block-7 {
+        float: left;
+        
+        &.bl-1 {
+          width: 25%;
+          border-right: none;
+        }
+        &.bl-2 {
+          width: 25%;
+          border-right: none;
+        }
+        &.bl-3 {
+          width: 25%;
+          border-right: none;
+        }
+        &.bl-4 {
+          width: 25%;
+        }
+        &.bl-5 {
+          width: 33%;
+          border-top: none;
+          border-right: none;
+        }
+        &.bl-6 {
+          width: 34%;
+          border-top: none;
+        }
+        &.bl-7 {
+          width: 33%;
+          border-top: none;
+          border-left: none;
+        }
+        
+        .block-link {
+          .title {
+            h2 {
+              font-size: 20px;
+              margin-top: 8px;
+              margin-bottom: 4px;
+            }
+          }
+        
+          .keypoints {
+            height: 150px;
+          }
+        }
+      }
+      
+      &.block-8 {
+        float: left;
+        
+        &.bl-1 {
+          width: 25%;
+          border-right: none;
+        }
+        &.bl-2 {
+          width: 25%;
+          border-right: none;
+        }
+        &.bl-3 {
+          width: 25%;
+          border-right: none;
+        }
+        &.bl-4 {
+          width: 25%;
+        }
+        &.bl-5 {
+          width: 25%;
+          border-top: none;
+          border-right: none;
+        }
+        &.bl-6 {
+          width: 25%;
+          border-top: none;
+          border-right: none;
+        }
+        &.bl-7 {
+          width: 25%;
+          border-top: none;
+          border-right: none;
+        }
+        &.bl-8 {
+          width: 25%;
+          border-top: none;
+        }
+        
+        .block-link {
+          .title {
+            h2 {
+              font-size: 20px;
+              margin-top: 8px;
+              margin-bottom: 4px;
+            }
+          }
+        
+          .keypoints {
+            height: 150px;
+          }
+        }
+      }
+      
+      &.block-9 {
+        float: left;
+        
+        &.bl-1 {
+          width: 33%;
+          border-right: none;
+        }
+        &.bl-2 {
+          width: 34%;
+        }
+        &.bl-3 {
+          width: 33%;
+          border-left: none;
+        }
+        &.bl-4 {
+          width: 33%;
+          border-right: none;
+          border-top: none;
+        }
+        &.bl-5 {
+          width: 34%;
+          border-top: none;
+        }
+        &.bl-6 {
+          width: 33%;
+          border-top: none;
+          border-left: none;
+        }
+        &.bl-7 {
+          width: 33%;
+          border-right: none;
+          border-top: none;
+        }
+        &.bl-8 {
+          width: 34%;
+          border-top: none;
+        }
+        &.bl-9 {
+          width: 33%;
+          border-top: none;
+          border-left: none;
+        }
+        
+        .block-link {
+          .title {
+            h2 {
+              font-size: 18px;
+              margin-top: 5px;
+              margin-bottom: 2px;
+            }
+          }
+        
+          .keypoints {
+            height: 100px;
+          }
+        }
+      }
+      
+      a.block-link {
+        display: block;
+        color: black;
+        overflow: hidden;
+        
+        .title {
+          text-align: center;
+        }
+        .keypoints {
+          height: 300px;
+        }
+        .takeaway {
+          text-align: center;
+          background: #eee;
+        }
+      }
+    }
+  }
+}
