--- a/app/views/canvases/_canvas_template.html.haml
+++ b/app/views/canvases/_canvas_template.html.haml
@@ -1,1 +1,3 @@
-= render "blocks/show", object: @block = @canvas.blocks.first
+- @canvas.blocks.each do |block|
+  .block{class: "block-#{@canvas.blocks.length} bl-#{cycle(1,2,3,4,5,6,7,8,9)}"}
+    = render "blocks/show", object: @block = block
