--- a/app/views/canvases/show.html.haml
+++ b/app/views/canvases/show.html.haml
@@ -4,6 +4,12 @@
     
   .blocks
     = render "blocks/index", object: @blocks = @canvas.blocks
+  
+  - if @blocks.length < 9
+    .row.add-block
+      .col-xs-12
+        = link_to new_block_path, class: "btn btn-primary" do
+          %span.glyphicon.glyphicon-plus
 
 .canvas
   = render "canvas_template"
