--- a/app/views/blocks/_index.html.haml
+++ b/app/views/blocks/_index.html.haml
@@ -4,6 +4,7 @@
       %span.editable{data:{controller: 'blocks', object_id: block.id, action: 'edit', attribute: 'title'}}= block.title
       .row
         .col-xs-12.takeaway.editable{data:{controller: 'blocks', object_id: block.id, action: 'edit', attribute: 'takeaway'}}= block.takeaway
-    .delete-btn
-      = link_to block, method: :delete, data: { :confirm => 'Tem certeza?' } do
-        %span.glyphicon.glyphicon-remove
+    - if @blocks.length > 1
+      .delete-btn
+        = link_to block, method: :delete, data: { :confirm => 'Tem certeza?' } do
+          %span.glyphicon.glyphicon-remove
