User can now order blocks in the Canvas

--- a/app/views/blocks/_index.html.haml
+++ b/app/views/blocks/_index.html.haml
@@ -9,5 +9,5 @@
         = link_to block, method: :delete do
           %span.glyphicon.glyphicon-remove
     .move-up-btn
-      = link_to :root do
+      = link_to move_up_block_path(block) do
         %span.glyphicon.glyphicon-arrow-up
