--- a/app/views/blocks/_show.html.haml
+++ b/app/views/blocks/_show.html.haml
@@ -1,4 +1,4 @@
-= link_to edit_block_path(@block), class: "block-link" do
+= link_to edit_block_path(@block), class: "block-link", data: {toggle: "modal", target: "#myModal"} do
   .row.title
     .col-xs-12
       %h2= @block.title
