User can now edit takeaway in the Block modal window

--- a/app/assets/stylesheets/blocks.css.scss
+++ b/app/assets/stylesheets/blocks.css.scss
@@ -318,6 +318,7 @@ body.canvases {
         .takeaway {
           text-align: center;
           background: #eee;
+          min-height: 35px;
         }
       }
     }
