--- a/app/views/blocks/_index.html.haml
+++ b/app/views/blocks/_index.html.haml
@@ -1,9 +1,9 @@
 - @blocks.each do |block|
   .row.block
     .col-xs-12.title
-      %span.editable{data:{controller: 'blocks', object_id: block.id, action: 'edit', attribute: 'title'}}= block.title
+      %span.editable{data:{controller: 'blocks', object_id: block.id, action: 'edit_attributes', attribute: 'title'}}= block.title
       .row
-        .col-xs-12.takeaway.editable{data:{controller: 'blocks', object_id: block.id, action: 'edit', attribute: 'takeaway'}}= block.takeaway
+        .col-xs-12.takeaway.editable{data:{controller: 'blocks', object_id: block.id, action: 'edit_attributes', attribute: 'takeaway'}}= block.takeaway
     - if @blocks.length > 1
       .delete-btn
         = link_to block, method: :delete do
