--- a/app/views/application/_myModal.html.haml
+++ b/app/views/application/_myModal.html.haml
@@ -1,3 +1,3 @@
-.modal.fade.bs-modal-lg#myModal{tabindex: "-1", role: "dialog"}
-  .modal-dialog.modal-lg
+#myModal.modal.fade{tabindex: "-1", role: "dialog"}
+  .modal-dialog
     .modal-content
