--- a/app/views/blocks/_form.html.haml
+++ b/app/views/blocks/_form.html.haml
@@ -1,16 +1,2 @@
 = form_for @block do |f|
-  - if @block.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@block.errors.count, "error")} prohibited this block from being saved:"
-      %ul
-        - @block.errors.full_messages.each do |msg|
-          %li= msg
-
-  .field
-    = f.text_field :title
-  .field
-    = f.text_field :takeaway
-  .field
-    = f.hidden_field :canvas
-  .actions
-    = f.submit 'Save', class: "btn btn-primary"
+  = f.text_field @attr, autofocus: true
