--- a/app/views/blocks/_show.html.haml
+++ b/app/views/blocks/_show.html.haml
@@ -2,13 +2,11 @@
   .row.title
     .col-xs-12
       %h2= @block.title
-
   .row.keypoints
-    .col-xs-12
+    .col-xs-10.col-xs-offset-1.points
       %ul
         - @block.points.each do |point|
           %li= point.content
-      
   .row.takeaway
-    .col-xs-12
-      %h5= @block.takeaway
+    .col-xs-10.col-xs-offset-1.text
+      %h4= @block.takeaway
