Refactored a lot of code and lost track of wtf I'm doing. time to deploy

--- a/app/assets/stylesheets/blocks.css.scss
+++ b/app/assets/stylesheets/blocks.css.scss
@@ -273,10 +273,9 @@ body.canvases {
           text-align: center;
           
           .text {
-            background: #428bca;
+            background: #bbb;
             color: white;
             min-height: 39px;
-            border-radius: 5px;
           }
         }
       }
