--- a/app/views/canvases/_canvas_template.html.haml
+++ b/app/views/canvases/_canvas_template.html.haml
@@ -1,3 +1,3 @@
-- @canvas.blocks.each do |block|
-  .block{class: "block-#{@canvas.blocks.length} bl-#{cycle(1,2,3,4,5,6,7,8,9)}"}
+- @canvas.blocks.each_with_index do |block, index|
+  .block{class: "block-#{@canvas.blocks.length} bl-#{index+1}"}
     = render "blocks/show", object: @block = block
