--- a/app/assets/stylesheets/blocks.css.scss
+++ b/app/assets/stylesheets/blocks.css.scss
@@ -37,7 +37,7 @@ body.canvases {
         .block-link {
           .title {
             h2 {
-              font-size: 25px;
+              font-size: 15px;
               margin-top: 12px;
               margin-bottom: 7px;
             }
@@ -70,7 +70,7 @@ body.canvases {
         .block-link {
           .title {
             h2 {
-              font-size: 23px;
+              font-size: 15px;
               margin-top: 10px;
               margin-bottom: 5px;
             }
@@ -106,7 +106,7 @@ body.canvases {
         .block-link {
           .title {
             h2 {
-              font-size: 22px;
+              font-size: 15px;
               margin-top: 10px;
               margin-bottom: 5px;
             }
@@ -145,7 +145,7 @@ body.canvases {
         .block-link {
           .title {
             h2 {
-              font-size: 20px;
+              font-size: 15px;
               margin-top: 8px;
               margin-bottom: 4px;
             }
@@ -187,7 +187,7 @@ body.canvases {
         .block-link {
           .title {
             h2 {
-              font-size: 20px;
+              font-size: 15px;
               margin-top: 8px;
               margin-bottom: 4px;
             }
@@ -232,7 +232,7 @@ body.canvases {
         .block-link {
           .title {
             h2 {
-              font-size: 18px;
+              font-size: 15px;
               margin-top: 5px;
               margin-bottom: 2px;
             }
@@ -255,6 +255,7 @@ body.canvases {
           
           h2 {
             margin-top: 0px;
+            font-size: 15px;
           }
         }
         .keypoints {
@@ -267,6 +268,7 @@ body.canvases {
             border-radius: 5px;
             padding-top: 10px;
             padding-left: 0px;
+            font-size: 11px;
           }
         }
         .takeaway {
@@ -275,7 +277,10 @@ body.canvases {
           .text {
             background: #bbb;
             color: white;
-            min-height: 39px;
+            min-height: 55px;
+            h4 {
+              font-size: 11px;
+            }
           }
         }
       }
