--- a/app/assets/stylesheets/canvases.css.scss
+++ b/app/assets/stylesheets/canvases.css.scss
@@ -90,6 +90,20 @@ body.canvases {
     padding-left: 15px;
     padding-right: 15px;
     
+    .takeaway {
+      text-align: center;
+      background: #ddd;
+      margin-top: 10px;
+      border-bottom-right-radius: 5px;
+      border-bottom-left-radius: 5px;
+      padding-top: 10px;
+      font-weight: bold;
+      font-size: 16px;
+      
+      h2 {
+        margin-top: 10px;
+      }
+    }
     .keypoints {
       .keypoint {
         background: #eee;
@@ -104,6 +118,7 @@ body.canvases {
           width: 100%;
           border-radius: 5px;
           border: 1px solid #ddd;
+          font-size: 16px;
         }
         .btn-primary, .btn-danger{
           margin-top: 5px;
