--- a/app/views/application/_myModal.html.haml
+++ b/app/views/application/_myModal.html.haml
@@ -1,3 +1,3 @@
-#myModal.modal.fade{tabindex: "-1", role: "dialog"}
-  .modal-dialog
+#myModal.modal.fade.bs-modal-lg{tabindex: "-1", role: "dialog"}
+  .modal-dialog.modal-lg
     .modal-content
