Now all blocks have same height; No blocks with less than 3 points

--- a/app/assets/stylesheets/blocks.css.scss
+++ b/app/assets/stylesheets/blocks.css.scss
@@ -33,6 +33,7 @@ body.canvases {
       &.block-4 {
         width: 50%;
         float:left;
+        height: 265px;
         
         .block-link {
           .title {
@@ -50,6 +51,7 @@ body.canvases {
       }
       &.block-5 {
         float: left;
+        height: 265px;
         
         &.bl-1 {
           width: 33%;
@@ -83,6 +85,7 @@ body.canvases {
       }
       &.block-6 {
         float: left;
+        height: 265px;
         
         &.bl-1 {
           width: 33%;
@@ -119,6 +122,7 @@ body.canvases {
       }
       &.block-7 {
         float: left;
+        height: 265px;
         
         &.bl-1 {
           width: 25%;
@@ -158,6 +162,7 @@ body.canvases {
       }
       &.block-8 {
         float: left;
+        height: 265px;
         
         &.bl-1 {
           width: 25%;
@@ -200,6 +205,7 @@ body.canvases {
       }
       &.block-9 {
         float: left;
+        height: 215px;
         
         &.bl-1 {
           width: 33%;
