--- a/app/views/blocks/_show.html.haml
+++ b/app/views/blocks/_show.html.haml
@@ -6,7 +6,8 @@
     .col-xs-10.col-xs-offset-1.points
       %ul
         - @block.points.each do |point|
-          %li= point.content
+          - unless point.content.blank?
+            %li= point.content
   .row.takeaway
     .col-xs-10.col-xs-offset-1.text
       %h4= @block.takeaway
