--- a/app/views/blocks/_edit.html.haml
+++ b/app/views/blocks/_edit.html.haml
@@ -14,6 +14,5 @@
             %span.glyphicon.glyphicon-plus
   
 .row.takeaway
-  Takeaway
   .col-xs-12.text-center
-    %h2.editable{ data:{ controller: 'blocks', object_id: @block.id, action: 'edit_attributes', attribute: 'takeaway' } }= @block.takeaway || "Takeaway"
+    %h2.editable{ data:{ controller: 'blocks', object_id: @block.id, action: 'edit_attributes', attribute: 'takeaway' } }= @block.takeaway || "Preencha o Takeaway"
