--- a/app/views/points/_form.html.haml
+++ b/app/views/points/_form.html.haml
@@ -2,7 +2,7 @@
   = form_for [@block, @point], remote: true do |f|
     .row
       .col-xs-11
-        = f.text_area :content, class: "keypoint-content"
+        = f.text_area :content, class: "keypoint-content", placeholder: "Preencha o Ponto chave"
       .col-xs-1
         = f.submit 'Save', class: "btn btn-primary"
 .col-xs-1
