Canvas fully editable through ajax

--- a/app/assets/stylesheets/canvases.css.scss
+++ b/app/assets/stylesheets/canvases.css.scss
@@ -19,6 +19,12 @@ body.canvases {
         text-decoration: none;
         color: #666;
       }
+      
+      & form.edit_canvas {
+        font-size: 20px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+      }
     }
     .blocks {
       .block {
