--- a/app/views/blocks/edit_attributes.js.erb
+++ b/app/views/blocks/edit_attributes.js.erb
@@ -1,5 +1,5 @@
 form = $('<%= escape_javascript(render "form", object: @attr = @attribute) %>');
-content = $('.just-got-editted');
+content = $('.editting');
 content.after(form)
 content.css('display', 'none');
-content.removeClass('just-got-editted')
+content.removeClass('editting')
