--- a/app/views/canvases/_form.html.haml
+++ b/app/views/canvases/_form.html.haml
@@ -1,5 +1,2 @@
-= form_for @canvas do |f|
-  .field
-    = f.text_field :title, placeholder: 'Título do Canvas'
-  .actions
-    = f.submit 'Save', class: 'btn btn-primary'
+= form_for @canvas, remote: true do |f|
+  = f.text_field :title, placeholder: 'Título do Canvas'
