--- a/app/views/canvases/_form.html.haml
+++ b/app/views/canvases/_form.html.haml
@@ -1,2 +1,2 @@
 = form_for @canvas, remote: true do |f|
-  = f.text_field :title, placeholder: 'Título do Canvas'
+  = f.text_field :title, placeholder: 'Inserir Título da apresentação'
